--- a/demo/index.html
+++ b/demo/index.html
@@ -1,30 +1,17 @@
-<!doctype html>
-<html lang="en-GB">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <style>
-    body {
-      background: #fafafa;
-    }
-  </style>
-</head>
-<body>
-  <div id="demo"></div>
-
-  <script type="module">
-    import { html, render } from 'lit';
-    import '../dist/src/my-ing-app.js';
-
-    const header = 'Hello owc World!';
-    render(
-      html`
-        <my-ing-app .header=${header}>
-          some light-dom
-        </my-ing-app>
-      `,
-      document.querySelector('#demo')
-    );
-  </script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My ING App</title>
+    <script type="module" src="./dist/header.js"></script>
+    <script type="module" src="./dist/footer.js"></script>
+  </head>
+  <body>
+    <my-header></my-header>
+    <main>
+      <p>Your application content goes here.</p>
+    </main>
+    <my-footer></my-footer>
+  </body>
 </html>
